deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-app
  name: demo-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: demo-app
    weight: 100
